[metadata]
name = vmtp
summary = A data path performance tool for OpenStack clouds.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    vmtp

package_data =
    vmtp =
        tools/nuttcp-7.3.2
        tools/iperf

[entry_points]
console_scripts =
    vmtp = vmtp.vmtp:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = vmtp/locale
domain = vmtp

[update_catalog]
domain = vmtp
output_dir = vmtp/locale
input_file = vmtp/locale/vmtp.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vmtp/locale/vmtp.pot

[bdist_wheel]
universal = 1
